feat: Created user endpoint and refactored controllers folder name
